--- a/client/src/styles/modal.css
+++ b/client/src/styles/modal.css
@@ -1,9 +1,7 @@
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -11,6 +9,7 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding: 2rem;
   }
   
   /* Modal Content */
@@ -28,6 +27,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    text-align: right;
   }
   
   .close:hover,
